Removed DDL locking since YB no longer needed that